--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -20,6 +22,7 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@tsconfig/node22": "^22.0.1",
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
